--- a/index.html
+++ b/index.html
@@ -1,32 +1,17 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN"
-"http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-  <key>items</key>
-  <array>
-    <dict>
-      <key>assets</key>
-      <array>
-        <dict>
-          <key>kind</key>
-          <string>software-package</string>
-          <key>url</key>
-          <string>https://USERNAME.github.io/REPO/app.ipa</string>
-        </dict>
-      </array>
-      <key>metadata</key>
-      <dict>
-        <key>bundle-identifier</key>
-        <string>com.yourcompany.yourapp</string>
-        <key>bundle-version</key>
-        <string>1.0.0</string>
-        <key>kind</key>
-        <string>software</string>
-        <key>title</key>
-        <string>Tên App</string>
-      </dict>
-    </dict>
-  </array>
-</dict>
-</plist>
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Cài đặt ứng dụng iOS</title>
+</head>
+<body style="text-align:center;font-family:sans-serif">
+  <h2>Cài đặt ứng dụng iOS</h2>
+
+  <a href="itms-services://?action=download-manifest&url=https://USERNAME.github.io/REPO/manifest.plist"
+     style="font-size:20px;padding:12px 20px;background:#007aff;color:#fff;text-decoration:none;border-radius:8px;">
+     📲 Cài đặt ngay
+  </a>
+
+  <p>Mở bằng Safari trên iPhone / iPad</p>
+</body>
+</html>
