--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="text-align:center;font-family:sans-serif">
   <h2>Cài đặt ứng dụng iOS</h2>
 
-  <a href="itms-services://?action=download-manifest&url=https://USERNAME.github.io/REPO/manifest.plist"
+  <a href="itms-services://?action=download-manifest&url=https://rongchien2025.github.io/ios-install/manifest.plist"
      style="font-size:20px;padding:12px 20px;background:#007aff;color:#fff;text-decoration:none;border-radius:8px;">
      📲 Cài đặt ngay
   </a>
