--- a/index.html
+++ b/index.html
@@ -61,12 +61,11 @@ footer { background: #1d1d1f; color: white; text-align: center; padding: 1rem; m
   <!-- Header giống App Store -->
   <div class="app-header">
     <div class="app-header-content">
-      <div class="app-icon" id="appIcon"><img src="https://rongchien2025.github.io/ios-install/icon.png" alt="Gọi Rồng Online"></div>
+      <div class="app-icon" id="appIcon"><img src=https://goirong.vip/Assets/android-chrome-192x192.png" alt="Gọi Rồng Online"></div>
       <div class="app-info">
         <div class="app-title" id="appName">Gọi Rồng Online</div>
         <div class="install-section">
           <a href="itms-services://?action=download-manifest&url=https://rongchien2025.github.io/ios-install/manifest.plist" id="installBtn" class="install-btn"> Cài Đặt </a>
-          <span class="in-app-purchase" id="inAppPurchase">Mua Trong Ứng Dụng</span>
           <button class="share-btn" onclick="shareApp()" title="Chia sẻ">↗</button>
         </div>
       </div>
@@ -76,19 +75,19 @@ footer { background: #1d1d1f; color: white; text-align: center; padding: 1rem; m
   <div class="app-stats" id="appStats">
     <div class="stat-item" id="langStat">
       <div class="stat-label">Ngôn Ngữ</div>
-      <div class="stat-value" id="langValue">Tiếng Việt</div>
+      <div class="stat-value" id="langValue">VI</div>
     </div>
     <div class="stat-item" id="ageStat">
       <div class="stat-label">Độ Tuổi</div>
-      <div class="stat-value" id="ageValue">12+</div>
+      <div class="stat-value" id="ageValue">7+</div>
     </div>
     <div class="stat-item" id="sizeStat">
       <div class="stat-label">Kích Thước</div>
-      <div class="stat-value" id="sizeValue">150 MB</div>
+      <div class="stat-value" id="sizeValue">110 MB</div>
     </div>
     <div class="stat-item" id="categoryStat">
       <div class="stat-label">Thể Loại</div>
-      <div class="stat-value" id="categoryValue">Game</div>
+      <div class="stat-value" id="categoryValue">Nhập vai</div>
     </div>
   </div>
   <!-- Hướng dẫn cài đặt -->
@@ -102,6 +101,7 @@ footer { background: #1d1d1f; color: white; text-align: center; padding: 1rem; m
       <li>Chọn chứng chỉ nhà phát triển</li>
       <li>Nhấn <strong>"Tin Cậy"</strong></li>
       <li>Quay về màn hình chính và mở ứng dụng</li>
+      <li>Đối với IOS 16+ cần khởi động lại điện thoại</li>
     </ol>
   </div>
   <!-- Screenshots -->
@@ -127,21 +127,25 @@ footer { background: #1d1d1f; color: white; text-align: center; padding: 1rem; m
   <div class="developer-section" id="developerSection">
     <a class="developer-link" id="developerLink">
       <span>
-        <div id="developerName">Gọi Rồng VIP</div>
+        <div id="developerName"><a href="https://goirong.vip">Gọi Rồng VIP</a></div>
       </span>
       <span>›</span>
     </a>
     <div class="developer-label">Nhà Phát Triển</div>
   </div>
   <footer>
-    <p>&copy; 2025 <b><a href="/">IPA Signer</a></b>. Bảo lưu mọi quyền.</p>
+    <p>&copy; 2025 <b><a href="/"></a></b>. Bảo lưu mọi quyền.</p>
   </footer>
 </div>
 <script>
 let screenshots = [
-  "https://rongchien2025.github.io/ios-install/screen1.png",
-  "https://rongchien2025.github.io/ios-install/screen2.png",
-  "https://rongchien2025.github.io/ios-install/screen3.png"
+  "https://goirong.vip/Assets/review/seo1.png",
+  "https://goirong.vip/Assets/review/seo2.png",
+  "https://goirong.vip/Assets/review/seo3.png",
+  "https://goirong.vip/Assets/review/seo4.png",
+  "https://goirong.vip/Assets/review/seo5.png",
+  "https://goirong.vip/Assets/review/seo6.png",
+  "https://goirong.vip/Assets/review/seo7.png"
 ];
 let currentScreenshot = 0;
 function changeScreenshot(direction) {
