--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ footer { background: #1d1d1f; color: white; text-align: center; padding: 1rem; m
   <!-- Header giống App Store -->
   <div class="app-header">
     <div class="app-header-content">
-      <div class="app-icon" id="appIcon"><img src=https://goirong.vip/Assets/android-chrome-192x192.png" alt="Gọi Rồng Online"></div>
+      <div class="app-icon" id="appIcon"><img src="https://goirong.vip/Assets/android-chrome-192x192.png" alt="Gọi Rồng Online"></div>
       <div class="app-info">
         <div class="app-title" id="appName">Gọi Rồng Online</div>
         <div class="install-section">
@@ -82,7 +82,7 @@ footer { background: #1d1d1f; color: white; text-align: center; padding: 1rem; m
       <div class="stat-value" id="ageValue">7+</div>
     </div>
     <div class="stat-item" id="sizeStat">
-      <div class="stat-label">Kích Thước</div>
+      <div class="stat-label">Kích cỡ</div>
       <div class="stat-value" id="sizeValue">110 MB</div>
     </div>
     <div class="stat-item" id="categoryStat">
@@ -109,7 +109,7 @@ footer { background: #1d1d1f; color: white; text-align: center; padding: 1rem; m
     <div class="screenshot-main">
       <button class="screenshot-nav prev" id="prevScreenshot" onclick="changeScreenshot(-1)">‹</button>
       <div class="screenshot-frame">
-        <img id="mainScreenshot" src="https://rongchien2025.github.io/ios-install/screen1.png" alt="Ảnh Chụp Màn Hình">
+        <img id="mainScreenshot" src="https://goirong.vip/Assets/review/seo1.png" alt="Ảnh Chụp Màn Hình">
       </div>
       <button class="screenshot-nav next" id="nextScreenshot" onclick="changeScreenshot(1)">›</button>
     </div>
@@ -139,7 +139,6 @@ footer { background: #1d1d1f; color: white; text-align: center; padding: 1rem; m
 </div>
 <script>
 let screenshots = [
-  "https://goirong.vip/Assets/review/seo1.png",
   "https://goirong.vip/Assets/review/seo2.png",
   "https://goirong.vip/Assets/review/seo3.png",
   "https://goirong.vip/Assets/review/seo4.png",
